# accent_dict

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build_bins.yml
accent_dict_jp/: __init__.py
src/: abi_utils.rs  audio.rs  circle.rs  dict.rs  gen_svg.rs  headline.rs  key.rs  lib.rs  pages.rs  resource.rs
src/pxml/: example.rs  josushi.rs  mod.rs  ruby.rs  structs.rs  xml.rs
src/resource/: nrsc.rs  rsc.rs
