[package]
name = "accent_dict"
version = "0.5.0"
edition = "2021"
description = "A Rust library for parsing and interpreting the Monokakido dictionary format."
license = "MIT"

[lib]
name = "accent_dict"
crate-type = ["cdylib"]


[dependencies]
pyo3 = {version = "^0.21.2", features = ["extension-module", "abi3-py38"]}
miniz_oxide = { version = "0.7", default-features = false }
xmlparser = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1.3"
svg = "0.17.0"
