[package]
name = "accent_dict"
version = "0.7.0"
edition = "2024"
description = ""
license = "MIT"

[lib]
name = "accent_dict"
crate-type = ["cdylib"]




[dependencies]
pyo3 = {version = "^0.27.2", features = ["extension-module", "abi3-py38"]}
miniz_oxide = { version = "0.9.0", default-features = false }
xmlparser = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "8"
svg = "0.18"
